--- a/src/styles/core/scss/_row.scss
+++ b/src/styles/core/scss/_row.scss
@@ -1,9 +1,9 @@
 .group-tr-qualifying-position {
-  background-color: #4cc3554d; /* rgba(192, 222, 197, .3); */
+  background-color: rgba(76, 195, 85, 0.3);
 }
 
 .group-td-qualifying-position {
-  background-color: #4cc35580; /* rgba(192, 222, 197, .7); */
+  background-color: rgba(76, 195, 85, 0.5);
 }
 
 .group-tr-danger-position {
